--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ bin/
 \.settings/org\.eclipse\.core\.resources\.prefs
 
 \.settings/org\.eclipse\.jdt\.core\.prefs
+
+src/test/resources/DemoProject/\.settings/
