--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+	  <repository>
+		<id>github</id>
+		<name>GitHub MagpieBridge Apache Maven Packages</name>
+		<url>https://maven.pkg.github.com/MagpieBridge/MagpieBridge</url>
+	  </repository>
+	</repositories>
 </project>
 
