--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,17 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<magpiebridge.version>0.0.8</magpiebridge.version>
+		<magpiebridge.version>0.1.3-SNAPSHOT</magpiebridge.version>
 		<irconverter.version>0.1.6</irconverter.version>
-		<soot.version>3.3.0</soot.version>
+		<soot.version>4.2.1</soot.version>
 	</properties>
 
 	<dependencies>
 		<!-- MagpieBridge -->
 		<dependency>
-			<groupId>magpiebridge</groupId>
+			<groupId>com.github.magpiebridge</groupId>
 			<artifactId>magpiebridge</artifactId>
-			<version>${magpiebridge.version}</version>
+			<version>0.1.3</version>
 		</dependency>
 		<!-- IRConverter -->
 		<dependency>
@@ -33,7 +33,7 @@
 		</dependency>
 		<!-- soot -->
 		<dependency>
-			<groupId>ca.mcgill.sable</groupId>
+			<groupId>org.soot-oss</groupId>
 			<artifactId>soot</artifactId>
 			<version>${soot.version}</version>
 		</dependency>
