--- a/vscode/package.json
+++ b/vscode/package.json
@@ -53,6 +53,7 @@
 		"@types/mocha": "^5.2.6",
 		"@types/node": "^11.13.0",
 		"tslint": "^5.15.0",
-		"typescript": "^3.4.2"
+		"typescript": "^3.4.2",
+		"vsce": "^1.75.0"
 	}
 }
